--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/banner.png" class="d-block w-100" alt="...">
+                        <img src="images/img 2 (1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="fw-bold">YOU CAN ARRANGE <br> YOUR EVENT HERE</h1>
                             <p>Every event is importent for us. We always try to make <br> our customer happy</p>
-                            <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
+                            <a href="https://www.facebook.com/DiccBD/" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/banner.png" class="d-block w-100" alt="...">
+                        <img src="images/img 3 (1).jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="fw-bold">BEST WAY TO DECORATE <br> YOUR EVENT</h1>
                             <p>Here we ensure the best decoration of town. <br> We have more then 500 review with 5
                                 star. <br> So you can truely come to us for your upcoming event</p>
-                            <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
+                            <a href="https://www.facebook.com/DiccBD/" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -87,7 +87,7 @@
                             <h1 class="fw-bold">THE BEST SERVISES <br> OF THE TOWN</h1>
                             <p>We provide the best services in this city. <br> You can also stay in our place for <br>
                                 your event</p>
-                            <a href="" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
+                            <a href="https://www.facebook.com/DiccBD/" class="px-5 py-3 btn my-btn fw-bold">BOOK NOW </a>
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                     <p>We make sure your every moment very joyfull and precious. We provide every single customer our
                         best survises. People can also stay here for their event. We have also 400 hotel rooms with five
                         star facilities. We feel so much proud to provide the best servises in the city of Dhaka.</p>
-                    <a href="" class="px-5 py-3 btn my-btn fw-bold">Explore our album <i
+                    <a href="https://www.facebook.com/DiccBD/photos" class="px-5 py-3 btn my-btn fw-bold">Explore our album <i
                             class="fas fa-arrow-right ms-2"></i></a>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                         <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
                         <p><i class="far check me-2 fa-check-circle"></i>Per day bill</p>
                     </div>
-                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                    <a href="https://www.facebook.com/DiccBD/photos" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
                 <div class="col-lg-3 col-md-6 p-5">
                     <h1 class="fw-bold">$500</h1>
@@ -149,7 +149,7 @@
                         <p><i class="far check me-2 fa-check-circle"></i>Decoration design</p>
                         <p><i class="far check me-2 fa-check-circle"></i>Billed as shift</p>
                     </div>
-                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                    <a href="https://www.facebook.com/DiccBD/photos" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
                 <div class="col-lg-3 col-md-6 p-5 weadding-plus position-relative">
                     <h1 class="fw-bold">$800</h1>
@@ -166,7 +166,7 @@
                         <p><i class="far check me-2 fa-check-circle"></i>premium Decoration</p>
                         <p><i class="far check me-2 fa-check-circle"></i>Pay as plan</p>
                     </div>
-                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                    <a href="https://www.facebook.com/DiccBD/photos" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
                 <div class="col-lg-3 col-md-6 p-5">
                     <h1 class="fw-bold">$1200</h1>
@@ -180,7 +180,7 @@
                         <p><i class="far check me-2 fa-check-circle"></i>Premium Decoration</p>
                         <p><i class="far check me-2 fa-check-circle"></i>pay as plan</p>
                     </div>
-                    <a href="" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
+                    <a href="https://www.facebook.com/DiccBD/photos" class="btn-redius ms-2 px-5 py-2 btn my-btn fw-bold">Choose plan</a>
                 </div>
             </div>
         </section>
@@ -227,13 +227,16 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    What’s the difference between event design and event planning? 
+                                    What’s the difference between event design and event planning?
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Event design and event planning have some difference. We provite both of the services to our customers. If you hire us as a event designer, we will design all the entair things related to your event. And if you hair us as event planner, we will just provite you a plan about the event. Like how the event will going on.
+                                    Event design and event planning have some difference. We provite both of the
+                                    services to our customers. If you hire us as a event designer, we will design all
+                                    the entair things related to your event. And if you hair us as event planner, we
+                                    will just provite you a plan about the event. Like how the event will going on.
                                 </div>
                             </div>
                         </div>
@@ -247,7 +250,11 @@
                             <div id="four" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Planning an event can take from weeks to months, it really depends on the size and the details that the event involves. Having enough time allows you to comfortably cover different areas and prepare yourself for potential scenarios that might happen so you can consider various options prior the date. You always need more time than you think!
+                                    Planning an event can take from weeks to months, it really depends on the size and
+                                    the details that the event involves. Having enough time allows you to comfortably
+                                    cover different areas and prepare yourself for potential scenarios that might happen
+                                    so you can consider various options prior the date. You always need more time than
+                                    you think!
                                 </div>
                             </div>
                         </div>
@@ -261,7 +268,10 @@
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    If the return is caused by the consumer, consumer should be responsible for the shipping fee. The specific fee should be based on the express company you choose. If due to our reasons, the goods received are damaged or not correct, and the consumer is not required to bear the shipping fee for this reason.
+                                    If the return is caused by the consumer, consumer should be responsible for the
+                                    shipping fee. The specific fee should be based on the express company you choose. If
+                                    due to our reasons, the goods received are damaged or not correct, and the consumer
+                                    is not required to bear the shipping fee for this reason.
                                 </div>
                             </div>
                         </div>
@@ -275,9 +285,19 @@
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Use the right budgeting tool for you and your group. Using an Excel spreadsheet or Google Sheets that is shareable, changeable, and easy to keep up to date is crucial for budget management. Make sure to use headings and a format that is clear and easy to understand, giving access for editing only to those who need it. There are also some great event budgeting tools you can find on-line, but make sure they can be manipulated to meet your needs.
-Communicate the state of the budget to your team. This is critical for every event team so that each committee head will know exactly how much money they have to work with. As the event planner, communicate 5 to 10% less of the budgeted amount to make up for any overages that may come up.
-Update the budget regularly. Your nice and neat preliminary budget will be useless unless it is kept up-to-date. Update the budget maybe weekly at first, but expect daily budget work as the event draws closer.
+                                    Use the right budgeting tool for you and your group. Using an Excel spreadsheet or
+                                    Google Sheets that is shareable, changeable, and easy to keep up to date is crucial
+                                    for budget management. Make sure to use headings and a format that is clear and easy
+                                    to understand, giving access for editing only to those who need it. There are also
+                                    some great event budgeting tools you can find on-line, but make sure they can be
+                                    manipulated to meet your needs.
+                                    Communicate the state of the budget to your team. This is critical for every event
+                                    team so that each committee head will know exactly how much money they have to work
+                                    with. As the event planner, communicate 5 to 10% less of the budgeted amount to make
+                                    up for any overages that may come up.
+                                    Update the budget regularly. Your nice and neat preliminary budget will be useless
+                                    unless it is kept up-to-date. Update the budget maybe weekly at first, but expect
+                                    daily budget work as the event draws closer.
                                 </div>
                             </div>
                         </div>
@@ -288,36 +308,92 @@ Update the budget regularly. Your nice and neat preliminary budget will be usele
                 </div>
             </div>
         </section>
+        <!-- Sign up with your details  -->
+        <section class="container">
+            <h1 class="text-center fw-bold p-5">Get Lifetime Membership
+            </h1>
+            <div class="row align-items-center m-5 shadow-lg rounded p-5">
+                <div class="col-lg-6 p-4">
+                    <div>
+                        <form class="row g-3">
+                            <div class="col-md-6">
+                                <label for="inputEmail4" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Enter your email">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="inputPassword4" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="inputPassword4" placeholder="Enter your password">
+                            </div>
+                            <div class="col-12">
+                                <label for="inputAddress" class="form-label">Address</label>
+                                <input type="text" class="form-control" id="inputAddress" placeholder="Your full address">
+                            </div>
+                            <div class="col-12">
+                                <label for="inputAddress2" class="form-label">Stret No/Appartment No</label>
+                                <input type="text" class="form-control" id="inputAddress2"
+                                    placeholder="Flor no, flat no, building no">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="inputCity" class="form-label">City</label>
+                                <input type="text" class="form-control" id="inputCity">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="inputZip" class="form-label">Area</label>
+                                <input type="text" class="form-control" id="inputZip">
+                            </div>
+                            <div class="col-12">
+                                <label for="inputZip" class="form-label">Phone Number</label>
+                                <input type="text" class="form-control" id="inputZip">
+                            </div>
+                            <div class="col-12">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                                    <label class="form-check-label" for="gridCheck">
+                                        I agree with all the condition
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <a href="https://www.facebook.com/DiccBD/" class="px-5 py-3 btn my-btn fw-bold">SIGN UP</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-6 p-4">
+                    <img class="img-fluid" src="images/img4.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Footer Section  -->
     <footer class="container-fluid mt-5">
-        <div class="row bg-black text-light p-5 d-flex align-items-center ms-0 justify-content-between">
-            <div class="col-lg-6 p-4 py-5">
+        <div class="d-flex flex-column flex-md-row bg-black text-light p-5 justify-content-between align-items-center ms-0 ">
+            <div class=" p-4 py-5">
                 <p>© 2022 bike. All rights reserved</p>
             </div>
-            <div class="col-lg-6 p-4 ">
+            <div class=" p-4 ">
                 <h3 class="pb-3">Get the App</h3>
                 <div>
-                <button class="btn btn-dark px-4 d-flex align-items-center">
-                    <div>
-                        <i class="fs-1 me-4 fab fa-apple"></i>
-                    </div>
-                    <div>
-                        <small>Download on the</small>
-                        <h5>App Store</h5>
-                    </div>
-                </button>
+                    <button class="btn btn-dark px-4 d-flex align-items-center">
+                        <div>
+                            <i class="fs-1 me-4 fab fa-apple"></i>
+                        </div>
+                        <div>
+                            <small>Download on the</small>
+                            <h5>App Store</h5>
+                        </div>
+                    </button>
                 </div>
                 <div>
-                <button class="btn btn-dark px-4 my-3 d-flex align-items-center justify-content-center">
-                    <div>
-                        <i class="fs-1 me-3 fab fa-google-play"></i>
-                    </div>
-                    <div>
-                        <small>GET IT ON</small>
-                        <h5>Google Play</h5>
-                    </div>
-                </button>
+                    <button class="btn btn-dark px-4 my-3 d-flex align-items-center justify-content-center">
+                        <div>
+                            <i class="fs-1 me-3 fab fa-google-play"></i>
+                        </div>
+                        <div>
+                            <small>GET IT ON</small>
+                            <h5>Google Play</h5>
+                        </div>
+                    </button>
                 </div>
             </div>
         </div>
